Project migrated_graph_to_relational {
  database_type: "PostgreSQL"
}

Table users {
  id bigint [pk, increment]
}

Table edge_devices {
  id bigint [pk, increment]
}

Table dataset_schemas {
  id bigint [pk, increment]
  blob jsonb [not null]
}

Table datasheet_publishers {
  id bigint [pk, increment]
  name text [not null]
  publisher_identifier text
  publisher_identifier_scheme text
  scheme_uri text
  lang text
}

Table model_cards {
  id bigint [pk, increment]
  uuid uuid [not null, unique, default: `gen_random_uuid()`]
  name text [not null]
  version text
  is_private boolean [not null, default: false]
  is_gated boolean [not null, default: false]
  short_description text
  full_description text
  keywords text
  author text
  citation text
  input_data text
  input_type text
  output_data text
  foundational_model text
  category text
  documentation text
  model_requirements text[]
  bias_analysis jsonb
  xai_analysis jsonb
}

Table datasheets {
  identifier bigint [pk, increment]
  uuid uuid [not null, unique, default: `gen_random_uuid()`]
  publication_year integer
  resource_type text
  resource_type_general text
  size text
  format text
  version text
  is_private boolean [not null, default: false]

  dataset_schema_id bigint [ref: > dataset_schemas.id]
  publisher_id bigint [ref: > datasheet_publishers.id]

  indexes {
    (dataset_schema_id)
    (publisher_id)
  }
}

Table datasheet_creators {
  id bigint [pk, increment]
  datasheet_id bigint [not null, ref: > datasheets.identifier]

  creator_name text [not null]
  name_type text
  lang text

  given_name text
  family_name text

  name_identifier text
  name_identifier_scheme text
  name_id_scheme_uri text

  affiliation text
  affiliation_identifier text
  affiliation_identifier_scheme text
  affiliation_scheme_uri text
}

Table datasheet_titles {
  id bigint [pk, increment]
  datasheet_id bigint [not null, ref: > datasheets.identifier]

  title text [not null]
  title_type text
  lang text
}

Table datasheet_subjects {
  id bigint [pk, increment]
  datasheet_id bigint [not null, ref: > datasheets.identifier]

  subject text [not null]
  subject_scheme text
  scheme_uri text
  value_uri text
  classification_code text
  lang text
}

Table datasheet_contributors {
  id bigint [pk, increment]
  datasheet_id bigint [not null, ref: > datasheets.identifier]

  contributor_type text [not null]
  contributor_name text [not null]
  name_type text

  given_name text
  family_name text

  name_identifier text
  name_identifier_scheme text
  name_id_scheme_uri text

  affiliation text
  affiliation_identifier text
  affiliation_identifier_scheme text
  affiliation_scheme_uri text
}

Table datasheet_dates {
  id bigint [pk, increment]
  datasheet_id bigint [not null, ref: > datasheets.identifier]

  date text [not null] // RKMS-ISO8601
  date_type text [not null]
  date_information text
}

Table datasheet_alternate_identifiers {
  id bigint [pk, increment]
  datasheet_id bigint [not null, ref: > datasheets.identifier]

  alternate_identifier text [not null]
  alternate_identifier_type text [not null]
}

Table datasheet_related_identifiers {
  id bigint [pk, increment]
  datasheet_id bigint [not null, ref: > datasheets.identifier]

  related_identifier text [not null]
  related_identifier_type text [not null]
  relation_type text [not null]

  related_metadata_scheme text
  scheme_uri text
  scheme_type text
  resource_type_general text
}

Table datasheet_rights {
  id bigint [pk, increment]
  datasheet_id bigint [not null, ref: > datasheets.identifier]

  rights text
  rights_uri text
  rights_identifier text
  rights_identifier_scheme text
  scheme_uri text
  lang text
}

Table datasheet_descriptions {
  id bigint [pk, increment]
  datasheet_id bigint [not null, ref: > datasheets.identifier]

  description text [not null]
  description_type text [not null]
  lang text
}

Table datasheet_geo_locations {
  id bigint [pk, increment]
  datasheet_id bigint [not null, ref: > datasheets.identifier]

  geo_location_place text

  point_longitude numeric
  point_latitude numeric

  box_west numeric
  box_east numeric
  box_south numeric
  box_north numeric

  polygon jsonb
}

Table datasheet_funding_references {
  id bigint [pk, increment]
  datasheet_id bigint [not null, ref: > datasheets.identifier]

  funder_name text [not null]
  funder_identifier text
  funder_identifier_type text
  scheme_uri text
  award_number text
  award_uri text
  award_title text
}

Table models {
  id bigint [pk, increment]
  name text [not null]
  version text
  description text
  owner text
  location text
  license text
  framework text
  model_type text
  test_accuracy numeric(6,5)
  model_metrics jsonb
  inference_labels jsonb
  model_structure jsonb

  model_card_id bigint [not null, unique, ref: > model_cards.id]

  indexes {
    (model_card_id)
  }
}

Table experiments {
  id bigint [pk, increment]
  start_at timestamptz [not null]
  submitted_at timestamptz
  executed_at timestamptz
  model_used_at timestamptz

  total_images integer
  total_predictions integer
  total_ground_truth_objects integer
  true_positives integer
  false_positives integer
  false_negatives integer
  precision numeric(6,5)
  recall numeric(6,5)
  f1_score numeric(6,5)
  mean_iou numeric(6,5)
  map_50 numeric(6,5)
  map_50_95 numeric(6,5)

  user_id bigint [not null, ref: > users.id]
  edge_device_id bigint [not null, ref: > edge_devices.id]
  model_id bigint [not null, ref: > models.id]

  indexes {
    (user_id)
    (edge_device_id)
    (model_id)
    (start_at)
  }
}

Table raw_images {
  id bigint [pk, increment]
  image_name text [not null]
  ground_truth jsonb
}

Table experiment_images {
  id bigint [pk, increment]
  experiment_id bigint [not null, ref: > experiments.id]
  raw_image_id bigint [not null, ref: > raw_images.id]

  image_count integer
  image_received_at timestamptz
  image_scored_at timestamptz
  image_store_deleted_at timestamptz
  image_decision text
  top_label text
  top_probability numeric(8,7)
  ingested_at timestamptz [not null]
  scores jsonb

  indexes {
    (experiment_id)
    (raw_image_id)
    (experiment_id, raw_image_id) [unique]
    (image_received_at)
    (ingested_at)
  }
}
